--- a/less/oya-tb-megamenu-beta5.less
+++ b/less/oya-tb-megamenu-beta5.less
@@ -116,7 +116,7 @@
 					padding-right: 240px;
 				}
 				&.utlk2 {
-					padding-right: 140px;
+					padding-right: 145px;
 				}
 				&.utlk3 {
 					padding-right: 45px;
