--- a/less/responsive.less
+++ b/less/responsive.less
@@ -376,10 +376,67 @@
                         }
                 }
         }
+	/* Areas of Focus */
+	section#block-views-oya-areas-of-focus-block {
+		& .view-oya-areas-of-focus {
+			margin-bottom: 40px
+		}
+	}
+        section#block-views-oya-areas-of-focus-block {
+                & h2 {
+                        padding: 30px 50px;
+                }
+        }
+
+        div.image-btn-hover-container {
+                position: absolute;
+                background: rgba(0,0,0,0.5);
+                top: 70%;
+                width: 100%;
+                height: 100%;
+                transition: all 0.7s ease-out;
+                color: #FFF;
+                text-align: center;
+                & .field {
+                        padding: 0px;
+			display: table;
+			height: 30%;
+			width: 100%;
+                }
+                & a > div.field:first-child .field-item {
+                        font-size: 34px;
+                        line-height: 40px;
+                        font-family: @oya-font-adelle-regular;
+			display: table-cell;
+			vertical-align: middle;
+                }
+                & .img-text .field .field-items .field-item {
+                        font-size: 24px;
+                        line-height: 27px;
+                        color: #F0F0F0;
+                }
+                &:hover {
+                        top: 0%;
+                        background: rgba(55, 87, 136, 0.5);
+                }
+                & .read-more {
+                        background: @oya-blue-color;
+                        position: absolute;
+                        bottom: 0;
+                        width: 100%;
+                        padding: 20px;
+                        & a {
+                                color: #FFF;
+                                text-transform: uppercase;
+                                text-decoration: none;
+                                font-size: 24px;
+                                font-family: @oya-font-montserrat;
+                        }
+                }
+        }
 }
 
 
-/* AT MIN LARGE */
 @media (min-width: @screen-sm-min) {
 	.row.no-gutter {
 		padding: 0px 56px;
